--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -3,6 +3,8 @@
 }
 
 html {
+  height: 100%;
+
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -33,11 +35,12 @@ body {
 
   min-height: 100%;
 
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 
   font-family: 'Cormorant Garamond', serif;
 
+  color: $main-color;
   background-color: #111111;
 }
 
