--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -41,4 +41,28 @@
   .main-menu__item {
     padding: 10px 0;
   }
+
+
+
+  .footer__wrapper {
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 100px 170px;
+    justify-content: center;
+    column-gap: 20%;
+    row-gap: 10%;
+
+    padding: 30px 0;
+  }
+
+  .footer__contacts {
+    order: 1;
+  }
+
+  .footer__working-mode {
+    order: 1;
+  }
+
+  .footer__social {
+    justify-self: start;
+  }
 }
