--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,8 +9,7 @@
   cursor: pointer;
 
   & path,
-  & line
-   {
+  & line {
     transition: stroke 0.5s ease;
   }
 
@@ -22,6 +21,27 @@
   }
 }
 
+.text {
+  cursor: default;
+}
+
+.title {
+  padding: 0;
+  margin: 0;
+
+  font-family: 'EB Garamond', serif;
+  font-weight: 700;
+
+  cursor: default;
+}
+
+.title--small {
+  padding-bottom: 25px;
+
+  font-size: 24px;
+  font-weight: 700;
+  text-align: left;
+}
 
 .header__wrapper {
   display: flex;
@@ -121,6 +141,76 @@
 }
 
 
+.footer {
+  flex: 0 0 auto;
+}
+
+
+
+.footer__wrapper {
+  display: grid;
+  grid-template-columns: 60px 300px 180px 170px;
+  justify-content: space-between;
+  padding: 80px 0;
+
+  border-top: 1px solid $main-color;
+  border-bottom: 1px solid $main-color;
+}
+
+
+
+.footer__social {
+  justify-self: end;
+}
+
+.contacts__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.contacts__link {
+  font-size: 18px;
+  font-weight: 400;
+
+  color: $main-color;
+
+  text-decoration: none;
+
+  transition: 0.5s all;
+
+  &:hover,
+  &:focus {
+    color: $second-color;
+  }
+}
+
+.contacts__adress {
+  font-size: 18px;
+  font-weight: 400;
+
+  color: $main-color;
+}
+
+.working-mode__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  font-size: 18px;
+  font-weight: 400;
+
+  color: $main-color;
+}
+
+.copyright__text {
+  margin: 0;
+  padding: 30px 0 30px 0;
+
+  font-family: Cormorant Garamond, serif;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
 @import 'media.scss';
-
-
