--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,7 +4,25 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
+
+  .promo {
+    height: 500px;
+
+    background: url(../images/bgc-mob.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .promo__title {
+    width: 350px;
+    margin: 0 auto;
+    margin-top: 50px;
+
+    font-size: 40px;
+    line-height: 86px;
+  }
 
   .header__wrapper {
     padding-top: 10px;
@@ -19,6 +37,7 @@
   }
 
   .main-menu {
+    display: none;
     z-index: 10;
 
     order: 2;
@@ -45,11 +64,11 @@
 
 
   .footer__wrapper {
-    grid-template-columns: 300px 300px;
+    grid-template-columns: 300px 200px;
     grid-template-rows: 100px 170px;
     justify-content: center;
-    column-gap: 20%;
-    row-gap: 10%;
+    column-gap: 10%;
+    row-gap: 5%;
 
     padding: 30px 0;
   }
