--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -43,6 +43,26 @@
   text-align: left;
 }
 
+.promo {
+  height: 1038px;
+
+  background-image: url(../images/bgc.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.promo__title {
+  display: block;
+  width: 550px;
+  margin: 0 auto;
+  margin-top: 260px;
+
+  text-align: center;
+  font-size: 72px;
+  line-height: 86px;
+}
+
 .header__wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -207,7 +227,7 @@
   margin: 0;
   padding: 30px 0 30px 0;
 
-  font-family: Cormorant Garamond, serif;
+  font-family: 'Cormorant Garamond', serif;
   font-size: 18px;
   font-weight: 700;
   text-align: center;
