--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -202,7 +202,68 @@
   flex: 0 0 auto;
 }
 
+.services__list {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, 396px));
+  grid-template-rows: repeat(2, auto);
+  column-gap: 44px;
+  row-gap: 60px;
+  margin: 0;
+  padding: 0;
+  padding-right: 20px;
 
+  list-style: none;
+}
+
+.service {
+  max-width: 396px;
+}
+
+.service__img-wrapper {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: 20px;
+
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background-color: transparent;
+    border: 1px solid $second-color;
+  }
+}
+
+.service__img {
+  width: 100%;
+  height: auto;
+}
+
+.service__link {
+  padding: 0;
+
+  text-decoration: none;
+
+  color: $main-color;
+
+  transition: 0.5s all;
+
+  &:hover,
+  &:focus {
+    color: $second-color;
+  }
+}
+
+.service__description {
+  margin: 30px 0;
+  font-family: 'EB Garamond', serif;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: left;
+}
 
 .footer__wrapper {
   display: grid;
