--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -353,6 +353,20 @@
   height: auto;
 }
 
+.map__img {
+  width: 100%;
+  height: auto;
+}
+
+.map-description__wrapper {
+  display: grid;
+  grid-template-columns: 315px 180px 315px 180px;
+  justify-content: space-between;
+
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+
 .footer__wrapper {
   display: grid;
   grid-template-columns: 60px 300px 180px 170px;
