--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -236,4 +236,27 @@
   .master__name {
     padding-top: 10px;
   }
+
+  .price__list {
+    padding-bottom: 50px;
+  }
+
+  .prise-card {
+    flex-direction: column;
+  }
+
+  .price-card__image {
+    width: 80%;
+    order: -1;
+    margin-bottom: 25px;
+  }
+
+  .price-card__table {
+    width: 80%;
+  }
+
+  .prise-card__service {
+    padding-top: 25px;
+    padding-bottom: 15px;
+  }
 }
