--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -422,6 +422,57 @@
   padding-bottom: 10px;
 }
 
+.price__list {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+
+  padding: 0;
+  margin: 0;
+  padding-bottom: 100px;
+}
+
+.price-card__table {
+  border-collapse: collapse;
+}
+
+.prise-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  list-style: none;
+}
+
+.price-card__image {
+  width: 49%;
+  height: auto;
+}
+
+.price-card__table {
+  width: 40%;
+}
+
+.prise-card__service {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 40px;
+  padding-bottom: 20px;
+
+  border-bottom: 1px solid $main-color;
+
+  &:first-child {
+    padding-top: 0;
+  }
+}
+
+.prise-card__description {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
 .footer__wrapper {
   display: grid;
   grid-template-columns: 60px 300px 180px 170px;
