--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -352,7 +352,6 @@
   margin: 0;
   padding: 0;
   padding-top: 60px;
-  padding-bottom: 100px;
   list-style: none;
 }
 
@@ -378,7 +377,6 @@
   justify-content: space-between;
 
   padding-top: 80px;
-  padding-bottom: 100px;
 }
 
 .masters__list {
@@ -390,7 +388,6 @@
   margin: 0;
   padding-top: 20px;
   padding-right: 16px;
-  padding-bottom: 100px;
   list-style: none;
 }
 
@@ -429,7 +426,6 @@
 
   padding: 0;
   margin: 0;
-  padding-bottom: 100px;
 }
 
 .price-card__table {
@@ -471,6 +467,92 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
+}
+
+.info {
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  width: 475px;
+  height: 1038px;
+
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+
+  background-color: #111111;
+  border-left: 1px solid $main-color;
+
+  &.info--close {
+    display: none;
+    right: -100%;
+  }
+}
+
+.button--info-close {
+  position: absolute;
+  top: 42px;
+  width: 28px;
+  height: 28px;
+
+  &::before,
+  &::after {
+    content: '';
+
+    position: absolute;
+    left: -5px;
+    top: 13px;
+    width: 37px;
+    height: 2px;
+
+    background-color: $main-color;
+
+    transition: 0.5s all;
+  }
+}
+
+.button--info-close::before {
+  transform: rotate(45deg);
+}
+
+.button--info-close::after {
+  transform: rotate(-45deg);
+}
+
+.button--info-close:hover::before,
+.button--info-close:hover::after,
+.button--info-close:focus::before,
+.button--info-close:focus::after {
+  background-color: $second-color;
+}
+
+.info__contacts {
+  padding-top: 60px;
+}
+
+.info__working-mode {
+  padding-top: 60px;
+}
+
+.info__container {
+  position: relative;
+  width: 315px;
+  margin: 0 auto;
+  padding-top: 246px;
+}
+
+.info__text {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+
+  line-height: 23px;
+}
+
+.footer {
+  margin-top: 100px;
 }
 
 .footer__wrapper {
